--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -1,1 +1,13 @@
+name: 'github-action'
 
+on: workflow_dispatch
+
+jobs:
+  lzx:
+    runs-on: ubuntu-latest
+    steps:
+      - run: |
+             date
+             echo "lzx" to lzx.yaml
+        
+      
