--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -9,5 +9,29 @@ jobs:
       - run: |
              date
              echo "lzx" to lzx.yaml
+             #安装前先卸载操作系统默认安装的docker，
+             sudo apt-get remove docker docker-engine docker.io containerd runc
+             sudo apt install apt-transport-https ca-certificates curl software-properties-common gnupg lsb-release
+             #添加 Docker 官方 GPG key
+             curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+             #添加 apt 源
+             echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+             #更新源
+             sudo apt update
+             sudo apt-get update
+             #安装最新版本的Docker
+             sudo apt install docker-ce docker-ce-cli containerd.io
+             #等待安装完成
+             #查看Docker版本
+             sudo docker version
+             #查看Docker运行状态
+             sudo systemctl status docker
+             sudo apt-get install bash-completion
+            
+             sudo curl -L https://raw.githubusercontent.com/docker/docker-ce/master/components/cli/contrib/completion/bash/docker -o /etc/bash_completion.d/docker.sh
+            
+             source /etc/bash_completion.d/docker.sh
+
+
         
       
